# gemma-stt

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: DOMAIN_SHOWCASE.md  FINDINGS.md  MODEL_SUPPORT.md  USER_GUIDE.md
gemma_stt/: __init__.py  cli.py  models.py  transcribe.py
scripts/: fetch_fixtures.py
skills/gemma-stt-transcription/: SKILL.md
tests/: run_domain_showcase.py
tests/fixtures/: manifest.json
tests/fixtures/domains/: manifest.json  showcase_results_e2b.json  showcase_results_e4b.json
