[project]
name = "gemma-stt"
version = "0.1.0"
description = "Standalone speech-to-text (transcription) CLI built on Gemma 4's native audio encoder, running locally via mlx-vlm on Apple Silicon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pinned: Gemma 4's audio_tower conv weight layout changed between mlx-vlm
    # releases (see docs/FINDINGS.md). 0.4.4 is the version validated against
    # the local Gemma 4 MLX checkpoints.
    "mlx==0.31.1",
    "mlx-vlm==0.4.4",
    "soundfile>=0.12",
    "numpy",
]

[project.optional-dependencies]
# Only needed to (re)generate the MInDS-14 test fixtures via
# scripts/fetch_fixtures.py minds14 -- not required to run the CLI itself.
fixtures = ["datasets>=2.14"]

[project.scripts]
gemma-stt = "gemma_stt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemma_stt"]
